force-app/main/default/objects/TAD_Order__c/TAD_Order__c.object-meta.xml
<CustomObject>
    <label>TAD Order</label>
    <nameField>
        <label>Order Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TAD Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>