force-app/main/default/objects/TAD_Order__c/fields/Accommodation_booked__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_booked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accommodation booked</label>
    <type>Checkbox</type>
</CustomField>