force-app/main/default/objects/TAD_Order__c/fields/Accommodation_booked_Date__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_booked_Date__c</fullName>
    <label>Accommodation booked Date</label>
    <type>Date</type>
</CustomField>