force-app/main/default/objects/TAD_Order__c/fields/Account_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Email_Address__c</fullName>
    <formula>IF( RecordType.Name=&apos;TAD&apos; || RecordType.Name=&apos;TNZ&apos; || RecordType.Name=&apos;Hotel&apos;  , IF(OR(ordexp_account__r.RecordType.Name = &apos;Product Partner&apos;,ordexp_account__r.RecordType.Name = &apos;PAF Corp Client&apos;), ordexp_account__r.Company_Email__c , ordexp_account__r.PersonEmail),  IF(OR(Agency_Id__r.RecordType.Name = &apos;Product Partner&apos;,Agency_Id__r.RecordType.Name = &apos;PAF Corp Client&apos;), Agency_Id__r.Company_Email__c , Agency_Id__r.PersonEmail))</formula>
    <label>Account Email Address</label>
    <type>Text</type>
</CustomField>