force-app/main/default/objects/TAD_Order__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>IF(ordexp_account__r.IsPersonAccount ,   ordexp_account__r.PersonContact.FirstName +&apos; &apos;+ ordexp_account__r.PersonContact.LastName    ,  ordexp_account__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>