force-app/main/default/objects/TAD_Order__c/fields/Account_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Phone_Number__c</fullName>
    <formula>IF(
NOT(ISBLANK(ordexp_account__r.PersonContact.MobilePhone)),
ordexp_account__r.PersonContact.MobilePhone,
(ordexp_account__r.Phone)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Phone Number</label>
    <type>Text</type>
</CustomField>