force-app/main/default/objects/TAD_Order__c/fields/Account_SFID__c.field-meta.xml
<CustomField>
    <fullName>Account_SFID__c</fullName>
    <formula>ordexp_account__r.SFID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account SFID</label>
    <type>Text</type>
</CustomField>