force-app/main/default/objects/TAD_Order__c/fields/AccountOrderRef__c.field-meta.xml
<CustomField>
    <fullName>AccountOrderRef__c</fullName>
    <formula>ordexp_account__r.Id+&apos;-&apos;+Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountOrderRef</label>
    <type>Text</type>
</CustomField>