force-app/main/default/objects/TAD_Order__c/fields/Add_On_information__c.field-meta.xml
<CustomField>
    <fullName>Add_On_information__c</fullName>
    <label>Add On information</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>