force-app/main/default/objects/TAD_Order__c/fields/Addon_Credit_Utilized__c.field-meta.xml
<CustomField>
    <fullName>Addon_Credit_Utilized__c</fullName>
    <label>Addon Credit Utilized</label>
    <summarizedField>order_line_item__c.Addon_Credit_Utilized__c</summarizedField>
    <summaryForeignKey>order_line_item__c.ordexp_TAD_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>