force-app/main/default/objects/TAD_Order__c/fields/AddOn_Withheld_Amount__c.field-meta.xml
<CustomField>
    <fullName>AddOn_Withheld_Amount__c</fullName>
    <label>AddOn Withheld Amount</label>
    <summarizedField>order_line_item__c.AddOn_Withheld_Amount__c</summarizedField>
    <summaryForeignKey>order_line_item__c.ordexp_TAD_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>