force-app/main/default/objects/TAD_Order__c/fields/Agency_Id__c.field-meta.xml
<CustomField>
    <fullName>Agency_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TAD Orders (Agency Id)</relationshipLabel>
    <relationshipName>TAD_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>