force-app/main/default/objects/TAD_Order__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <formula>Agency_Id__r.Parent_Company__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent</label>
    <type>Text</type>
</CustomField>