force-app/main/default/objects/TAD_Order__c/fields/Agent_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Agent_Email_Address__c</fullName>
    <label>Agent Email Address</label>
    <type>Email</type>
</CustomField>