force-app/main/default/objects/TAD_Order__c/fields/Agent_HQ_Fee__c.field-meta.xml
<CustomField>
    <fullName>Agent_HQ_Fee__c</fullName>
    <formula>/*Temporary formula used to develop the subsequent Clicklink*/

 ordexp_gross_amount_final__c *0.025</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent HQ Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>