force-app/main/default/objects/TAD_Order__c/fields/Agent_HQ_Fee_Description__c.field-meta.xml
<CustomField>
    <fullName>Agent_HQ_Fee_Description__c</fullName>
    <formula>&quot;Agent HQ fee @2.5% on &quot; &amp; Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent HQ Fee Description</label>
    <type>Text</type>
</CustomField>