force-app/main/default/objects/TAD_Order__c/fields/Agent_Proxy_DT__c.field-meta.xml
<CustomField>
    <fullName>Agent_Proxy_DT__c</fullName>
    <formula>&quot;DT-000339&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Proxy DT</label>
    <type>Text</type>
</CustomField>