force-app/main/default/objects/TAD_Order__c/fields/AP_Purchase_Confirmation_Resend__c.field-meta.xml
<CustomField>
    <fullName>AP_Purchase_Confirmation_Resend__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is to RESEND the Order Confirmation email for a deal with FLIGHTS</description>
    <label>Resend Confirmation Email</label>
    <type>Checkbox</type>
</CustomField>