force-app/main/default/objects/TAD_Order__c/fields/AP_Set_order_confirmed_time__c.field-meta.xml
<CustomField>
    <fullName>AP_Set_order_confirmed_time__c</fullName>
    <label>AP Set order confirmed time</label>
    <type>DateTime</type>
</CustomField>