force-app/main/default/objects/TAD_Order__c/fields/Authorized_Personnel__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Personnel__c</fullName>
    <label>Authorized Personnel</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>