force-app/main/default/objects/TAD_Order__c/fields/Automate_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Automate_Cancellation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automate Cancellation</label>
    <type>Checkbox</type>
</CustomField>