force-app/main/default/objects/TAD_Order__c/fields/Awaiting_New_PP_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_New_PP_Rollup__c</fullName>
    <label>Awaiting New PP Rollup</label>
    <summaryFilterItems>
        <field>customer_POE__c.Pif_Statuses__c</field>
        <operation>equals</operation>
        <value>Not completed</value>
    </summaryFilterItems>
    <summaryForeignKey>customer_POE__c.ordexp_tad_order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>