force-app/main/default/objects/TAD_Order__c/fields/BMD_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>BMD_Email_Id__c</fullName>
    <label>BMD Email Id</label>
    <type>Email</type>
</CustomField>