force-app/main/default/objects/TAD_Order__c/fields/BNCDL_Change_Day__c.field-meta.xml
<CustomField>
    <fullName>BNCDL_Change_Day__c</fullName>
    <formula>CASE(
MOD(   DATEVALUE(BNCDL_Changed_Date__c) - DATE( 1900, 1, 7 ), 7 ), 
0, &quot;Sunday&quot;,
1, &quot;Monday&quot;,
2, &quot;Tuesday&quot;,
3, &quot;Wednesday&quot;,
4, &quot;Thursday&quot;,
5, &quot;Friday&quot;,
6, &quot;Saturday&quot;,
Null
)</formula>
    <label>BNCDL Changed Day</label>
    <type>Text</type>
</CustomField>