force-app/main/default/objects/TAD_Order__c/fields/BNCDL_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>BNCDL_Changed_Date__c</fullName>
    <label>BNCDL Changed Date</label>
    <type>DateTime</type>
</CustomField>