force-app/main/default/objects/TAD_Order__c/fields/BNCDL_Order__c.field-meta.xml
<CustomField>
    <fullName>BNCDL_Order__c</fullName>
    <formula>ordexp_departure_date__r.BNCDL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BNCDL Order</label>
    <type>Checkbox</type>
</CustomField>