force-app/main/default/objects/TAD_Order__c/fields/Bonus_Points_Cash__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Points_Cash__c</fullName>
    <formula>/*IF( DATEVALUE(CreatedDate) &gt; DATE(2022,05,24) , IF(NOT( ISBLANK(Qantas_Frequent_Flyer_Number__c) ),(((ordexp_total_payment_rollup__c  - ordexp_total_refund_amount__c - Total_Coupon_Amount__c ) - QFF_Cash__c) * (IF( Deal_Name__c=&apos;4254&apos; &amp;&amp; DATEVALUE(ordexp_purchase_date__c) &gt;= DATE(2023,09,27) &amp;&amp; DATEVALUE(ordexp_purchase_date__c) &lt;= DATE(2023,10,07), 6, 3) ) ), 0), 0) */


/* IF( Name=&apos;300222&apos; || Name=&apos;300278&apos; || Name=&apos;300285&apos;  || Name=&apos;299959&apos; , 999, 0)*/

IF( DATEVALUE(CreatedDate) &gt; DATE(2022,05,24) , IF(NOT( ISBLANK(Qantas_Frequent_Flyer_Number__c) ),(((ordexp_total_payment_rollup__c  - ordexp_total_refund_amount__c - Total_Coupon_Amount__c )
 - QFF_Cash__c) *(IF( (Deal_Name__c=&apos;4199&apos;  &amp;&amp;  DATEVALUE(ordexp_purchase_date__c) &gt;= DATE(2023,09,27) &amp;&amp; 
      DATEVALUE(ordexp_purchase_date__c) &lt;= DATE(2023,10,07) ) ||
(Deal_Name__c=&apos;5032&apos;  &amp;&amp;  DATEVALUE(ordexp_purchase_date__c) &gt;= DATE(2023,11,01) &amp;&amp; 
 DATEVALUE(ordexp_purchase_date__c) &lt;= DATE(2023,11,30) ) || (Deal_Name__c=&apos;4254&apos;  &amp;&amp;  DATEVALUE(ordexp_purchase_date__c) &gt;= DATE(2023,09,27) &amp;&amp; 
      DATEVALUE(ordexp_purchase_date__c) &lt;= DATE(2023,10,07) ) , 6, 0) )  ), 0), 0)
+
IF( (ordexp_account__r.Off_Bonus_Point__c = true ||  Is_Qf_Order__c=true  ) &amp;&amp; DATEVALUE(ordexp_purchase_date__c) &gt;= DATE(2023,11,09) &amp;&amp;  DATEVALUE(ordexp_purchase_date__c) &lt;= DATE(2023,11,15) , 5000, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bonus Points Cash</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>