force-app/main/default/objects/TAD_Order__c/fields/Booking_Hotel__c.field-meta.xml
<CustomField>
    <fullName>Booking_Hotel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Hotel</label>
    <referenceTo>Booking_Hotel__c</referenceTo>
    <relationshipLabel>TAD Orders</relationshipLabel>
    <relationshipName>TAD_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>