force-app/main/default/objects/TAD_Order__c/fields/Booking_Hotel_Status__c.field-meta.xml
<CustomField>
    <fullName>Booking_Hotel_Status__c</fullName>
    <formula>TEXT(Booking_Hotel__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Hotel Status</label>
    <type>Text</type>
</CustomField>