force-app/main/default/objects/TAD_Order__c/fields/BPay_CRN__c.field-meta.xml
<CustomField>
    <fullName>BPay_CRN__c</fullName>
    <label>BPay CRN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>