force-app/main/default/objects/TAD_Order__c/fields/Cancellation_Count__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Count__c</fullName>
    <label>Cancellation Count</label>
    <summaryFilterItems>
        <field>Cancellation_Refund_POE__c.Cancellation_Type__c</field>
        <operation>notEqual</operation>
        <value>Refund without Cancellation</value>
    </summaryFilterItems>
    <summaryForeignKey>Cancellation_Refund_POE__c.ordexp_tad_order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>