force-app/main/default/objects/TAD_Order__c/fields/Check_Orders_Test__c.field-meta.xml
<CustomField>
    <fullName>Check_Orders_Test__c</fullName>
    <formula>IF( (ordexp_amount_outstanding__c = Total_Credit_Amount__c ) &amp;&amp; ordexp_amount_outstanding__c&gt;0, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Orders Test</label>
    <type>Checkbox</type>
</CustomField>