force-app/main/default/objects/TAD_Order__c/fields/China_EDM__c.field-meta.xml
<CustomField>
    <fullName>China_EDM__c</fullName>
    <formula>AND

(INCLUDES( ordexp_deal__r.Country__c ,&apos;China&apos;),




( NOW() - ordexp_pif_outstanding_to_zero_time__c ) &gt;= ( 24 / 24 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>China EDM</label>
    <type>Checkbox</type>
</CustomField>