force-app/main/default/objects/TAD_Order__c/fields/Commission_Amount_RollUp__c.field-meta.xml
<CustomField>
    <fullName>Commission_Amount_RollUp__c</fullName>
    <label>Commission Amount OLIs</label>
    <summarizedField>order_line_item__c.Total_OLI_Commission__c</summarizedField>
    <summaryFilterItems>
        <field>order_line_item__c.OLI_Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>order_line_item__c.ordexp_TAD_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>