force-app/main/default/objects/TAD_Order__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <formula>case(
RecordType.Name,
&quot;TAD&quot;, &quot;a9e2x0000000001AAA&quot;,
&quot;TC&quot;, &quot;a9e2x0000000001AAA&quot;,
&quot;TNZ&quot;, &quot;a9e2x0000000006AAA&quot;,
&quot;WT&quot;, &quot;a9e2x0000000006AAA&quot;,
&quot;a9e2x0000000001AAA&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company</label>
    <type>Text</type>
</CustomField>