force-app/main/default/objects/TAD_Order__c/fields/Converted_from_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Converted_from_Legacy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Converted from Legacy</label>
    <type>Checkbox</type>
</CustomField>