force-app/main/default/objects/TAD_Order__c/fields/Counter_Of_Sales__c.field-meta.xml
<CustomField>
    <fullName>Counter_Of_Sales__c</fullName>
    <label>Counter Of Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>