force-app/main/default/objects/TAD_Order__c/fields/Coupon_Used_Web__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Used_Web__c</fullName>
    <label>Coupon Used(Web)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>