force-app/main/default/objects/TAD_Order__c/fields/Created_Yesterday__c.field-meta.xml
<CustomField>
    <fullName>Created_Yesterday__c</fullName>
    <formula>IF( DATEVALUE(CreatedDate) = TODAY() + (-1),
TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Yesterday</label>
    <type>Checkbox</type>
</CustomField>