force-app/main/default/objects/TAD_Order__c/fields/Cruise_Reference_Required__c.field-meta.xml
<CustomField>
    <fullName>Cruise_Reference_Required__c</fullName>
    <formula>IF(  (TEXT(ordexp_deal__r.Cruise_Cabin_Booked_by__c) ==&apos;Partner&apos;) &amp;&amp;   ordexp_cabin_bookings_outstanding__c != 0, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cruise Reference Required</label>
    <type>Checkbox</type>
</CustomField>