force-app/main/default/objects/TAD_Order__c/fields/Cruise_Upgrade__c.field-meta.xml
<CustomField>
    <fullName>Cruise_Upgrade__c</fullName>
    <label>Cruise Upgrade Amount</label>
    <summarizedField>Cruise_Upgrade__c.Total__c</summarizedField>
    <summaryFilterItems>
        <field>Cruise_Upgrade__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Cruise_Upgrade__c.TAD_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>