force-app/main/default/objects/TAD_Order__c/fields/CS_Attribution_Sum_Sale_Value__c.field-meta.xml
<CustomField>
    <fullName>CS_Attribution_Sum_Sale_Value__c</fullName>
    <label>CS Attribution Sum Sale Value</label>
    <summarizedField>CS_Attribution_POE__c.cs_Sale_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>CS_Attribution_POE__c.cs_status__c</field>
        <operation>equals</operation>
        <value>Sold</value>
    </summaryFilterItems>
    <summaryForeignKey>CS_Attribution_POE__c.TAD_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>