force-app/main/default/objects/TAD_Order__c/fields/CS_Attribution_Value__c.field-meta.xml
<CustomField>
    <fullName>CS_Attribution_Value__c</fullName>
    <label>CS Attribution Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>