force-app/main/default/objects/TAD_Order__c/fields/Deal_Merchant_Code_Reference__c.field-meta.xml
<CustomField>
    <fullName>Deal_Merchant_Code_Reference__c</fullName>
    <formula>ordexp_deal__r.Merchant_Code_Reference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Merchant Code/Reference</label>
    <type>Text</type>
</CustomField>