force-app/main/default/objects/TAD_Order__c/fields/Deal_pdf__c.field-meta.xml
<CustomField>
    <fullName>Deal_pdf__c</fullName>
    <label>Deal pdf</label>
    <type>Url</type>
</CustomField>