force-app/main/default/objects/TAD_Order__c/fields/Deal_Title__c.field-meta.xml
<CustomField>
    <fullName>Deal_Title__c</fullName>
    <formula>ordexp_deal__r.title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Title</label>
    <type>Text</type>
</CustomField>