force-app/main/default/objects/TAD_Order__c/fields/DealFC__c.field-meta.xml
<CustomField>
    <fullName>DealFC__c</fullName>
    <formula>LEFT(Description__c, (FIND(&quot;|&quot;, Description__c)-1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DealFC</label>
    <type>Text</type>
</CustomField>