force-app/main/default/objects/TAD_Order__c/fields/dealpdf__c.field-meta.xml
<CustomField>
    <fullName>dealpdf__c</fullName>
    <formula>HYPERLINK(ordexp_deal__r.pdf__c,ordexp_deal__r.pdf__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>dealpdf</label>
    <type>Text</type>
</CustomField>