force-app/main/default/objects/TAD_Order__c/fields/Dealremoved_PC__c.field-meta.xml
<CustomField>
    <fullName>Dealremoved_PC__c</fullName>
    <formula>RIGHT( Description__c, LEN(Description__c) - FIND(&quot;|&quot;, Description__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealremoved(PC)</label>
    <type>Text</type>
</CustomField>