force-app/main/default/objects/TAD_Order__c/fields/Delacon_Api_Status__c.field-meta.xml
<CustomField>
    <fullName>Delacon_Api_Status__c</fullName>
    <label>Delacon Api Status</label>
    <length>131070</length>
    <type>LongTextArea</type>
</CustomField>