force-app/main/default/objects/TAD_Order__c/fields/Delacon_Sale_converted_Date__c.field-meta.xml
<CustomField>
    <fullName>Delacon_Sale_converted_Date__c</fullName>
    <label>Delacon Sale converted Date</label>
    <type>DateTime</type>
</CustomField>