force-app/main/default/objects/TAD_Order__c/fields/Delacon_String__c.field-meta.xml
<CustomField>
    <fullName>Delacon_String__c</fullName>
    <label>Delacon String</label>
    <length>255</length>
    <type>Text</type>
</CustomField>