force-app/main/default/objects/TAD_Order__c/fields/Departure_City_Text__c.field-meta.xml
<CustomField>
    <fullName>Departure_City_Text__c</fullName>
    <label>Departure City Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>