force-app/main/default/objects/TAD_Order__c/fields/Departure_City_Text_Has_NZ__c.field-meta.xml
<CustomField>
    <fullName>Departure_City_Text_Has_NZ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Departure City Text Has NZ</label>
    <type>Checkbox</type>
</CustomField>