force-app/main/default/objects/TAD_Order__c/fields/Departure_Date_PC__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date_PC__c</fullName>
    <formula>ordexp_departure_date__r.date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure Date PC</label>
    <type>Date</type>
</CustomField>