force-app/main/default/objects/TAD_Order__c/fields/Empty_text_field__c.field-meta.xml
<CustomField>
    <fullName>Empty_text_field__c</fullName>
    <label>Empty text field</label>
    <length>1</length>
    <type>Text</type>
</CustomField>