force-app/main/default/objects/TAD_Order__c/fields/External_Transaction_Reference__c.field-meta.xml
<CustomField>
    <fullName>External_Transaction_Reference__c</fullName>
    <label>External Transaction Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>