force-app/main/default/objects/TAD_Order__c/fields/Feefo_Smartlink__c.field-meta.xml
<CustomField>
    <fullName>Feefo_Smartlink__c</fullName>
    <label>Feefo Smartlink</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>