force-app/main/default/objects/TAD_Order__c/fields/ff_Process_DT__c.field-meta.xml
<CustomField>
    <fullName>ff_Process_DT__c</fullName>
    <formula>and( Or( text(ordexp_master_status__c) = &quot;Secured&quot;, text(ordexp_master_status__c) = &quot;Cancelled&quot; ), ordexp_amount_outstanding__c &lt;= 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process DT</label>
    <type>Checkbox</type>
</CustomField>