force-app/main/default/objects/TAD_Order__c/fields/ff_Processed_DT__c.field-meta.xml
<CustomField>
    <fullName>ff_Processed_DT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed DT</label>
    <type>Checkbox</type>
</CustomField>