force-app/main/default/objects/TAD_Order__c/fields/FF_status_Batch__c.field-meta.xml
<CustomField>
    <fullName>FF_status_Batch__c</fullName>
    <label>FF Pending Processing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>