force-app/main/default/objects/TAD_Order__c/fields/ff_Total_Order_GST_Amount__c.field-meta.xml
<CustomField>
    <fullName>ff_Total_Order_GST_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Order GST Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>