force-app/main/default/objects/TAD_Order__c/fields/ffa_nett_amount_c__c.field-meta.xml
<CustomField>
    <fullName>ffa_nett_amount_c__c</fullName>
    <description>Nett amount as Amount without GST for fin journals</description>
    <formula>ordexp_total_price__c - ff_Total_Order_GST_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FFA Nett Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>