force-app/main/default/objects/TAD_Order__c/fields/FFStatus__c.field-meta.xml
<CustomField>
    <fullName>FFStatus__c</fullName>
    <label>FFStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unprocessed</fullName>
                <default>true</default>
                <label>Unprocessed</label>
            </value>
            <value>
                <fullName>Processing - Initial Sale</fullName>
            </value>
            <value>
                <fullName>Processing - Post Sale</fullName>
            </value>
            <value>
                <fullName>Processing - Cancellation</fullName>
            </value>
            <value>
                <fullName>Processed - Initial Sale</fullName>
            </value>
            <value>
                <fullName>Processed - Post Sale</fullName>
            </value>
            <value>
                <fullName>Processed - Cancellation</fullName>
            </value>
            <value>
                <fullName>Pending Processing</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
                <isActive>false</isActive>
                <label>Processed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>