force-app/main/default/objects/TAD_Order__c/fields/Fly_back_date__c.field-meta.xml
<CustomField>
    <fullName>Fly_back_date__c</fullName>
    <formula>ordexp_final_return_date__c -  
IF( ISBLANK(ordexp_departure_date__r.Tour_End_Day__c), 
IF(ISBLANK(ordexp_option__r.Tour_End_Day__c), 0, ordexp_option__r.Tour_End_Day__c)  , ordexp_departure_date__r.Tour_End_Day__c)</formula>
    <label>Fly back date</label>
    <type>Date</type>
</CustomField>