force-app/main/default/objects/TAD_Order__c/fields/Get_BPay_CRN__c.field-meta.xml
<CustomField>
    <fullName>Get_BPay_CRN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Get BPay CRN</label>
    <type>Checkbox</type>
</CustomField>