force-app/main/default/objects/TAD_Order__c/fields/Info_from_Logistic__c.field-meta.xml
<CustomField>
    <fullName>Info_from_Logistic__c</fullName>
    <label>Information for Merchants</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>