force-app/main/default/objects/TAD_Order__c/fields/Insurance_Status__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Status__c</fullName>
    <label>Insurance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Sent</fullName>
                <default>true</default>
                <label>Not Sent</label>
            </value>
            <value>
                <fullName>Instant Send</fullName>
            </value>
            <value>
                <fullName>12 Month Send</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>