force-app/main/default/objects/TAD_Order__c/fields/Irina_Test__c.field-meta.xml
<CustomField>
    <fullName>Irina_Test__c</fullName>
    <formula>HYPERLINK(&quot;https://tripadeal.qualtrics.com/jfe/form/SV_cBmVDjsO2c4R5PM?ContactID=aGU2x00000001tVGAQ&quot;, &quot;Click&quot;, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Irina Test</label>
    <type>Text</type>
</CustomField>