force-app/main/default/objects/TAD_Order__c/fields/Is_Agent_View__c.field-meta.xml
<CustomField>
    <fullName>Is_Agent_View__c</fullName>
    <formula>IF(((ordexp_is_web_order__c=true &amp;&amp; CreatedBy.LastName &lt;&gt; &apos;TripADeal&apos;) ||( ordexp_is_web_order__c = true &amp;&amp; (CreatedBy.LastName == &apos;TripADeal&apos; &amp;&amp;   Is_Web_Agent_Available__c =true)) ) , true, false)</formula>
    <label>Is Agent View</label>
    <type>Checkbox</type>
</CustomField>