force-app/main/default/objects/TAD_Order__c/fields/Is_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Is_Contacted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if you have contacted the customer post travel</inlineHelpText>
    <label>Is Contacted?</label>
    <type>Checkbox</type>
</CustomField>