force-app/main/default/objects/TAD_Order__c/fields/Is_Escape_Deal__c.field-meta.xml
<CustomField>
    <fullName>Is_Escape_Deal__c</fullName>
    <formula>OR(ordexp_deal__r.Is_Escapes__c,
ordexp_deal__r.show_as_escape__c,
INCLUDES( ordexp_deal__r.deal_type__c , &quot;stay&quot;),
INCLUDES( ordexp_deal__r.deal_type_nz__c , &quot;stay&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Escape Deal</label>
    <type>Checkbox</type>
</CustomField>