force-app/main/default/objects/TAD_Order__c/fields/Is_NRL_Non_Flights__c.field-meta.xml
<CustomField>
    <fullName>Is_NRL_Non_Flights__c</fullName>
    <formula>IF( ( (TEXT(ordexp_deal__r.Deal_Flag__c)=&apos;NRL&apos;) &amp;&amp; ordexp_deal__r.has_flights__c = false)  , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is NRL Non Flights?</label>
    <type>Checkbox</type>
</CustomField>