force-app/main/default/objects/TAD_Order__c/fields/Is_Phone_Order__c.field-meta.xml
<CustomField>
    <fullName>Is_Phone_Order__c</fullName>
    <formula>IF( ordexp_is_web_order__c == true &amp;&amp;  Is_Agent_View__c == false, false, True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Phone Order</label>
    <type>Checkbox</type>
</CustomField>